dark mode fixes, hide game menu

--- a/clients/web/src/components/game/ButtonPart.css
+++ b/clients/web/src/components/game/ButtonPart.css
@@ -7,4 +7,5 @@
 
 .game-button {
   margin: 10px;
+  text-align: left;
 }
